compléter setContenuTrad pour les tableaux